spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -1037,7 +1037,7 @@ header {
   border-radius: 12px;
   background: var(--primary-bgcolor);
   color: var(--font-color);
-  width: 30%;
+  width: 32.3%;
   min-height: 149px;
   height: 12vw;
   padding-left: 20px;
